syntax = "proto3";



import "proto/common/tip.proto";
import "proto/common/empty.proto";

option cc_generic_services = true;

message GameKickPlayerRequest {
  TipInfoMessage reason = 1;
  string operator = 2;
}

service SceneClientPlayerCommon 
{
  rpc SendTipToClient (TipInfoMessage) returns (Empty);
  rpc KickPlayer (GameKickPlayerRequest) returns (Empty);
}